crates/synd_term/tests/snapshots/integration__test__hello_world.snap
---
source: crates/synd_term/tests/integration.rs
expression: application.buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 30 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                    ▐█▌          ▐█  █           ▐   █           ▐█                                     ",
        "                                    █ █           █              █                █                                     ",
        "                                    █▌  █ █ ██▌   █ ▐█  ▐█▌ ▐█▌ ▐██ ▐█  ▐█▌ ██▌   █                                     ",
        "                                    ▐█  █ █ █ █ ▐██  █  █ █   █  █   █  █ █ █ █ ▐██                                     ",
        "                                     ▐█ █ █ █ █ █ █  █  █   ▐██  █   █  █ █ █ █ █ █                                     ",
        "                                    █ █ ▐██ █ █ █ █  █  █ █ █ █  █▐  █  █ █ █ █ █ █                                     ",
        "                                    ▐█▌   █ █ █ ▐█▐▌▐█▌ ▐█▌ ▐█▐▌ ▐▌ ▐█▌ ▐█▌ █ █ ▐█▐▌                                    ",
        "                                        ██▌                                                                             ",
        "                                                                                                                        ",
        "                                                          Login                                                         ",
        "                                    ────────────────────────────────────────────────                                    ",
        "                                     󰊤 GitHub                                                                          ",
        "                                      󰊭 Google                                                                          ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                   j/k:󰹹  Ent:󰏌  q:                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 7, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 7, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 8, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 8, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 9, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 9, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 10, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 10, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 11, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 11, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 12, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 12, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 13, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 13, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 14, fg: White, bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 84, y: 14, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 58, y: 16, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 63, y: 16, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 18, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 84, y: 18, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 51, y: 29, fg: Rgb(111, 93, 99), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 70, y: 29, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
    ]
}
